Fixed issue #1229, where the stickty banner was missaligned

--- a/website/macos-big-sur-icons/src/components/app.less
+++ b/website/macos-big-sur-icons/src/components/app.less
@@ -172,9 +172,9 @@ select{
     margin: auto !important;
     position: relative !important;
     padding: 10px !important;
-    top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translateX(-50%);
+    // transform: translate(-50%, -50%);
     display: grid;
     gap: 7px;
     text-align: center;
@@ -983,7 +983,7 @@ coral-buttongroup button{
 .card-no-ad{
     position: relative;
     top: 0px;
-    height: 100%
+    height: fit-content;
 }
 
 .card-hover{
